admission_controllers/opa/manifests/opa-svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: opa
  name: opa
  namespace: opa-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
    spec:
      serviceAccountName: opa-sa
      volumes:
      - name: opa-vol
        secret:
          secretName: opa-secret
      containers:
      - name: opa
        image: openpolicyagent/opa:0.39.0-rootless
        args:
        - run
        - --server
        - --tls-ca-cert-file=/certs/ca.crt
        - --tls-cert-file=/certs/tls.crt
        - --tls-private-key-file=/certs/tls.key
        - --addr=0.0.0.0:8443
        - --addr=http://127.0.0.1:8181
        - --log-format=json-pretty
        - --set=decision_logs.console=true
        - --set=status.console=true
        - --log-level=debug
        readinessProbe:
            httpGet:
              path: /health?plugins&bundle
              scheme: HTTPS
              port: 8443
            initialDelaySeconds: 5
            periodSeconds: 5
        livenessProbe:
            httpGet:
              path: /health
              scheme: HTTPS
              port: 8443
            initialDelaySeconds: 5
            periodSeconds: 5
        volumeMounts:
        - name: opa-vol
          mountPath: /certs
          readOnly: true
      - name: kube-mgmt
        image: openpolicyagent/kube-mgmt:4.1.0
        args:
        - --replicate-cluster=v1/namespaces
        - --replicate=v1/pods
        - --policies=policies
        - --enable-policies=true
        - --require-policy-label=true

---
apiVersion: v1
kind: Service
metadata:
  name: opa
  labels:
    app: opa
  namespace: opa-ns
spec:
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: opa
  type: ClusterIP
