admission_controllers/opa/manifests/opa.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa-deploy
  labels:
    app: opa-deploy
  namespace: opa-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa-deploy
  template:
    metadata:
      labels:
        app: opa-deploy
    spec:
      serviceAccountName: opa-sa
      volumes:
      - name: cert-vol
        secret:
          secretName: opa-tls
      containers:
      - name: opa
        image: openpolicyagent/opa:0.39.0
        imagePullPolicy: IfNotPresent
        args:
        - run
        - --server
        - --addr=0.0.0.0:8443
        - --addr=http://127.0.0.1:8181
        - --tls-ca-cert-file=/certs/ca.crt
        - --tls-cert-file=/certs/tls.crt
        - --tls-private-key-file=/certs/tls.key
        - --log-format=json-pretty
        - --log-level=debug
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: cert-vol
          mountPath: /certs
          readOnly: true
      - name: kube-mgmt
        image: openpolicyagent/kube-mgmt:4.1.0
        imagePullPolicy: IfNotPresent
        args:
        - --enable-polcies=true
        - --require-policy-label=true
        - --policies=policies
        - --replicate-cluster=v1/namespaces
        - --replicate=v1/pods

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opa-deploy
  name: opa-svc
  namespace: opa-system
spec:
  type: ClusterIP
  selector:
    app: opa-deploy
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
