admission_controllers/opa/manifests/opa-admission.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: opa-admission
  labels:
    name: opa-admission
webhooks:
- name: opa-svc.opa-system.svc.cluster.local
  admissionReviewVersions: [ "v1", "v1beta1" ]
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRJeE1Ea3dOVEExTXpFME5sb1hEVE14TURrd05EQTFNekUwTmxvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTHJDCjVIYlZrekxJaTNsYmMvY21JT29RQThRdWRUY2JLQlVxTDVBTE5pT0lLYzRMU0RLVVFkc3pYLzhiNDlteEdKWWoKRlhIb0tQa051Rlg0ZnlGNUloTjhUaG5UUk8waUNBUWkxbzYrV2t1YStUc0oxWTE4b0pYOG1qTXV4dndaTFBwSApKZzVBZzh5MGhxN2 [...]
    service:
      name: opa-svc
      namespace: opa-system
      port: 8443
  rules:
  - apiGroups: [ "*" ]
    apiVersions: [ "v1" ]
    resources: [ "pods" ]
    operations: [ "CREATE", "UPDATE" ]
    scope: Namespaced
  sideEffects: None
